tests/programs/symex/a5-test-cases/pass/symex_simple_pass.rice
// symex
#[symex]
fn example() {
  assert(1 + 1 == 2)
}