tests/programs/symex/a5-test-cases/fail/symex_arith_fail.rice
// symex
#[symex]
fn example(x: int, y: int) {
  let z = x + y in
  let w = z * 2 in
  assert(w >= 0)
}